added img of each single object

--- a/index.html
+++ b/index.html
@@ -36,29 +36,79 @@
         </header>
 
     <section class="table">
-        <div class="game-card" id="card-one">
+        <div id="0" class="card">
+            <div class="shape-container">
+                <div class="red oval blank"></div>
+                <div class="red oval blank"></div>
+            </div>
         </div>
-        <div class="game-card" id="card-two">
+        <div id="1" class="card">
+            <div class="shape-container">
+                <div class="green diamond blank"></div>
+                <div class="green diamond blank"></div>
+            </div>
         </div>
-        <div class="game-card" id="card-three">
+        <div id="2" class="card">
+            <div class="shape-container">
+                <div class="purple diamond blank"></div>
+                <div class="purple diamond blank"></div>
+            </div>
         </div>
-        <div class="game-card" id="card-four">
+        <div id="3" class="card">
+            <div class="shape-container"> 
+                <div class="purple squiggle full"></div>
+                <div class="purple squiggle full"></div>
+                <div class="purple squiggle full"></div>
+            </div>
         </div>
-        <div class="game-card" id="card-five">
+        <div id="4" class="card">
+            <div class="shape-container"> 
+                <div class="green squiggle blank"></div>
+                <div class="green squiggle blank"></div>
+                <div class="green squiggle blank"></div>
+            </div>
         </div>
-        <div class="game-card" id="card-six">
+        <div id="5" class="card">
+            <div class="shape-container"> 
+                <div class="green oval blank"></div>
+                <div class="green oval blank"></div>
+                <div class="green oval blank"></div>
+            </div>
         </div>
-        <div class="game-card" id="card-seven">
+        <div id="6" class="card">
+            <div class="shape-container"> 
+                <div class="purple squiggle blank"></div>
+                <div class="purple squiggle blank"></div>
+            </div>
         </div>
-        <div class="game-card" id="card-eight">
+        <div id="7" class="card">
+            <div class="shape-container"> 
+                <div class="green diamond stripe"></div>
+            </div>
         </div>
-        <div class="game-card" id="card-nine">
+        <div id="8" class="card">
+            <div class="shape-container"> 
+                <div class="green squiggle blank"></div>
+                <div class="green squiggle blank"></div>
+            </div>
         </div>
-        <div class="game-card" id="card-ten">
+        <div id="9" class="card">
+            <div class="shape-container"> 
+                <div class="purple squiggle stripe"></div>
+            </div>
         </div>
-        <div class="game-card" id="card-eleven">
+        <div id="10" class="card">
+            <div class="shape-container"> 
+                <div class="red diamond full"></div>
+                <div class="red diamond full"></div>
+                <div class="red diamond full"></div>
+            </div>
         </div>
-        <div class="game-card" id="card-twelve">
+        <div id="11" class="card">
+            <div class="shape-container"> 
+                <div class="red diamond blank"></div>
+                <div class="red diamond blank"></div>
+            </div>
         </div>
     </section>
     </div>
