possibility: adding images straight to html

--- a/index.html
+++ b/index.html
@@ -38,8 +38,12 @@
     <section class="table">
         <div id="0" class="card">
             <div class="shape-container">
-                <div class="red oval blank"></div>
-                <div class="red oval blank"></div>
+                <div class="red oval blank">
+                    <img id="red oval blank" src="img/set-img/red-blank-oval.png" alt="red-blank-oval-img">
+                </div>
+                <div class="red oval blank">
+                    <img id="red oval blank" src="img/set-img/red-blank-oval.png" alt="red-blank-oval-img">
+                </div>
             </div>
         </div>
         <div id="1" class="card">
