creates shapes in css

--- a/index.html
+++ b/index.html
@@ -38,12 +38,8 @@
     <section class="table">
         <div id="0" class="card">
             <div class="shape-container">
-                <div class="red oval blank">
-                    <img id="red oval blank" src="img/set-img/red-blank-oval.png" alt="red-blank-oval-img">
-                </div>
-                <div class="red oval blank">
-                    <img id="red oval blank" src="img/set-img/red-blank-oval.png" alt="red-blank-oval-img">
-                </div>
+                <div class="red oval blank"></div>
+                <div class="red oval blank"></div>
             </div>
         </div>
         <div id="1" class="card">
@@ -67,9 +63,9 @@
         </div>
         <div id="4" class="card">
             <div class="shape-container"> 
-                <div class="green squiggle blank"></div>
-                <div class="green squiggle blank"></div>
-                <div class="green squiggle blank"></div>
+                <div class="green squiggle full"></div>
+                <div class="green squiggle full"></div>
+                <div class="green squiggle full"></div>
             </div>
         </div>
         <div id="5" class="card">
@@ -81,8 +77,8 @@
         </div>
         <div id="6" class="card">
             <div class="shape-container"> 
-                <div class="purple squiggle blank"></div>
-                <div class="purple squiggle blank"></div>
+                <div class="purple diamond stripe"></div>
+                <div class="purple diamond stripe"></div>
             </div>
         </div>
         <div id="7" class="card">
@@ -92,13 +88,13 @@
         </div>
         <div id="8" class="card">
             <div class="shape-container"> 
-                <div class="green squiggle blank"></div>
-                <div class="green squiggle blank"></div>
+                <div class="red squiggle full"></div>
             </div>
         </div>
         <div id="9" class="card">
             <div class="shape-container"> 
-                <div class="purple squiggle stripe"></div>
+                <div class="purple oval stripe"></div>
+                <div class="purple oval stripe"></div>
             </div>
         </div>
         <div id="10" class="card">
