testing js logic

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </header>
 
     <section class="table">
-        <div id="0" class="card">
+        <div id="0" class="card card-selected">
             <div class="shape-container">
                 <div class="red oval blank"></div>
                 <div class="red oval blank"></div>
