--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         </div>
 
     <footer class="calls-to-action">
-        <div class="container">
+        <div class="container-footer">
 <!--             <div class="row">
                  <div class="text-center"> -->
                     <span class="glyphicon glyphicon glyphicon-envelope glyphicon-lg
